--- a/client/src/components/pages/Login/Login.css
+++ b/client/src/components/pages/Login/Login.css
@@ -1,4 +1,7 @@
 body {
-  background-color: #4070F4;
+  background-color: #ffffff;
   font-family: 'IBM Plex Sans Thai', sans-serif;
+}
+.login-bg{
+  background-color: #4070F4;
 }
