function Logout with clearing UI Navbar

--- a/client/src/components/pages/Navbar/Navbar.css
+++ b/client/src/components/pages/Navbar/Navbar.css
@@ -1,9 +1,8 @@
 .navbar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: #4070F4;
     color: rgb(255, 255, 255);
-    padding-right: 3rem;
   }
   .bi{
     padding-right: 1rem;
