FIX : validation register , change color

--- a/client/src/components/pages/Index/Index.css
+++ b/client/src/components/pages/Index/Index.css
@@ -21,7 +21,7 @@ body {
   color: white;
 }
 .btn-type4 {
-  border-color: #ddd626;
-  background-color: #ddd626;
+  border-color: #d6a820;
+  background-color: #d6a820;
   color: white;
 }
