--- a/client/src/components/pages/MainScreen/Content.css
+++ b/client/src/components/pages/MainScreen/Content.css
@@ -14,8 +14,8 @@
     color: white;
   }
   .bg-danger{
-    border-color: #ddd626;
-    background-color: #ddd626 !important;
+    border-color: #d6a820;
+    background-color: #d6a820 !important;
     color: white;
   }
   
