--- a/client/src/components/pages/ErrorPage/ErrorPage.css
+++ b/client/src/components/pages/ErrorPage/ErrorPage.css
@@ -1,5 +1,5 @@
 .bg-img {
-  background-image: url("./pagenotfound.jpg");
+  background-image: url("./errornotfound.png");
   background-size: cover;
   background-position: center;
 }
